--- a/front/src/styles/responsive.css
+++ b/front/src/styles/responsive.css
@@ -12,7 +12,62 @@
   display: none;
 }
 
+.order-card-header {
+  grid-template-columns: 2fr 1fr 2fr;
+}
+.order-card-body {
+  grid-template-columns: 1fr;
+  gap: 1rem;
+  border-bottom: 1px solid var(--gray-600);
+}
+.order-card-body:last-child {
+  border-bottom: none;
+}
+.order-card-body-thumb {
+  max-width: 110px;
+}
+.order-card-buttons {
+  flex-direction: column;
+}
+.order-buttons-width {
+  width: 150px;
+}
+.flex-grid {
+  display: flex;
+}
+
+.wish-card {
+  grid-template-columns: 1fr;
+}
+
+/* bigger screen size than the biggest iPhone */
+@media (min-width: 431px) {
+  .order-card-body-thumb {
+    max-width: 150px;
+  }
+  .order-buttons-width {
+    width: 200px;
+  }
+  .wish-card {
+    grid-template-columns: 1fr 200px;
+  }
+}
+/* screen size of iPad Mini and bigger */
 @media (min-width: 768px) {
+  .order-card-header {
+    grid-template-columns: 1fr 1fr 3fr;
+  }
+  .order-card-body {
+    grid-template-columns: 3fr 1.5fr;
+  }
+  .order-card-buttons {
+    flex-direction: column;
+    align-items: flex-end;
+  }
+  .flex-grid {
+    display: grid;
+  }
+
   .rps-header {
     padding: 10px;
   }
@@ -25,7 +80,6 @@
   .rsp-main-width {
     width: 800px;
   }
-
   .rps-mobile-menu-button {
     display: none;
   }
